# FractiVerse-1.0

./: .coverage  .env  .gitignore  README.md  SPEC.md  SPEC_ACCELERATORS.md  SPEC_FRACTIVERSE_1.0.md  SPEC_LEARNING.md  SPEC_PATTERN_SYSTEM.md  SPEC_PEFF.md  SPEC_TRAINING_COORDINATOR.md  cognition_level.json  cognitive_state.json  config.py  fracticody_engine.py  fracticody_report.html  main.py  memory.json  pytest.ini  requirements.txt  setup.py  test_fractiverse.py  test_holographic_patterns.py
core/: __init__.py  base.py  cognition.py  cognitive_controller.py  cognitive_processor.py  engine.py  fractal_blockchain.py  fractal_cognition.py  fractal_pattern_network.py  fractal_pattern_processor.py  fractal_processor.py  fractal_reasoning.py  fractal_transformer.py  fracti_decision_engine.py  fracti_fpu.py  fractichain.py  fracticody_engine.py  fracticognition.py  fractinet.py  fractiverse.py  fractiverse_config.json  fractiverse_config.py  knowledge_harvester.py  knowledge_integrator.py  logging_config.py  maintenance_manager.py  memory.py  memory_manager.py  metrics_manager.py  network.py  pattern_emergence.py  pattern_network.py  pattern_processor.py  pattern_recognition.py  peff_harmonization.py  pyproject.toml  reporting.py  requirements.txt  resonance_detector.py  server.py  (+10 more)
core/chain/: blockchain.py  consensus.py
core/cognition/: accelerator.py  hologram.py  learning.py  memory_integration.py  memory_retrieval.py  pattern_analysis.py  pattern_analysis_quantum.py  pattern_classifier.py  pattern_completion.py  pattern_emergence.py  pattern_evolution.py  peff.py  (+7 more)
(+237 files in other folders)
