[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractiverse-core"
version = "1.0.0"
authors = [
    { name = "FractiVerse Team" }
]
description = "FractiVerse Core - Quantum-Fractal Cognitive System"
dependencies = [
    "torch>=2.0.0",
    "numpy<2.0.0",
    "scipy>=1.7.0",
] 